# 0xAutoPR

./: .env.example  .gitignore  0xAutoPR_DeepDive.md  0xAutoPR_Spec_v1.0.md  NIM_MODELS.md  README.md  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  code_reader.py  fix_writer.py  orchestrator.py  patch_generator.py  pr_opener.py  review_agent.py  test_writer.py
core/: __init__.py  config.py  github_client.py  language.py  llm.py  state.py  vector_store.py
scripts/: real_llm_test.py  setup_github_token.sh  smoke_test.py
tests/: test_agents.py  test_pipeline.py
triggers/: github_actions.yml  webhook_server.py
