[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "0xautopr"
version = "1.0.0"
description = "Automated PR review and auto-fix system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.0.0",
    "google-generativeai>=0.8.0",
    "groq>=0.9.0",
    "chromadb>=0.5.0",
    "PyGithub>=2.1.0",
    "GitPython>=3.1.40",
    "Flask>=3.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
